--- a/page.html
+++ b/page.html
@@ -6,6 +6,10 @@ h2 {
     font-size: 27px;
     font-family: 'Cairo', sans-serif;
 }
+.starf {
+    color: #3F51B5;
+    font-size: 25px;
+}
 .star2 {
     color: red;
     font-size: 20px;
@@ -74,11 +78,8 @@ a, a:visited {
 </div>
 
 
-
-
-
-
-
+<div class='starf'>ماهي ملفات تعريف الإرتباط Cookies؟ وكيفية السيطرة عليها في جميع المتصفحات! </div>
+<br>
 <h2 id="First_Point_Header">الاهتمام بالمعلومات والمعاني الطبيه </h2>
 الاهتمام بالمعلومات والمعاني الطبيه
 الاهتمام بالمعلومات والمعاني الطبيهالاهتمام بالمعلومات والمعاني الطبيهالاهتمام بالمعلومات والمعاني الطبيه
