--- a/pg.html
+++ b/pg.html
@@ -1,11 +1,47 @@
 <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+
 <style>
+.topaz-line {
+    position: relative;
+    color: #ff5733;
+    width: 160px;
+    margin: 25px auto;
+    font-size: 13px;
+    line-height: 20px;
+    text-align: center;
+    overflow: hidden;
+    height: 20px;
+}
+.topaz-line:before, .topaz-line:after {
+    content: '';
+    position: absolute;
+    width: 50%;
+    top: 50%;
+    display: block;
+    border-bottom: 1px solid #e1e1e1;
+    margin-top: -1px;
+}
+.topaz-line:before {
+    left: -15px;
+}
+.topaz-line:after {
+    right: -15px;
+}
+.fa-stop:before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    BACKGROUND: #4caf50;
+    position: absolute;
+    margin: 4px -5px;
+}
 .sora-works-box {
 background-size: cover;
 overflow: hidden;
 margin: 0 auto;
 padding:20px 0;
 margin-bottom: 40px;
+margin-top: 20px;
 }
 .row .sora-works-box {
 width: none;
@@ -23,7 +59,6 @@ font-size: 33px;
     width: max-content;
     text-align: center;
     margin: 0 auto;
-    border-bottom: 3px solid #f35943;
         margin-bottom: 20px;
 }
 .works-title span {
@@ -43,28 +78,27 @@ color: #004bb7;
 margin-bottom: 20px;
 }
 .works-icons li {
-    width: 60px;
+width: 60px;
     height: 60px;
     position: relative;
-    background: linear-gradient(to left, #f45c43, #eb3349);
+    background: linear-gradient(to left, #f45c43, #004bb7);
     display: inline-block;
     padding: 12px 0px 0px 12px;
     list-style: none;
-    box-shadow: 0 15px 34px rgba(240, 73, 70, 0.26);
+    box-shadow: 0 15px 34px rgba(158, 158, 158, 0.33);
+    border-radius: 50px;
     -webkit-transition: all 0.4s ease-in-out;
-    outline: 1px solid #f35844;
-    outline-offset: 5px;
 }
 .works-icons li .text {
     line-height: 60px;
-    font-size: 38px;
+    font-size: 30px;
     color: #fff;
     margin-right: 12px;
 }
 .works-heading {
 font-size: 18px;
 line-height: 21px;
-color: #202020;
+color: #4caf50;
 text-transform: capitalize;
 font: normal normal 15px jazeera;
 margin-bottom: 10px;
@@ -159,6 +193,7 @@ color: #004bb7;
 <div class="works-wrap row">
 <div class="works-title">
 <h4>كيف نعمل</h4>
+<div class="dima-divider topaz-line"><i class="fa fa-stop"></i></div>
 <span>
 نسعى دائما لتقديم أفضل واحدث الحلول التكنولوجية بعمل متقن وبزمن قياسي مما يلبي احتياجات عملائنا ويعمل على انجاح مشاريعهم لنكون بذلك شركاء النجاح ، مهما كانت افكارك ثق تماماً سنقوم بتحويلها لحلول عملية تخدم مشروعك للمضي قدما لتحقيق النجاح .
 </span>
@@ -241,6 +276,7 @@ color: #004bb7;
 <div class="works-wrap row">
 <div class="works-title">
 <h4>خدماتنا الالكترونية</h4>
+<div class="dima-divider topaz-line"><i class="fa fa-stop"></i></div>
 <span>
 نسعى دائما لتقديم أفضل واحدث الحلول التكنولوجية بعمل متقن وبزمن قياسي مما يلبي احتياجات عملائنا ويعمل على انجاح مشاريعهم لنكون بذلك شركاء النجاح ، مهما كانت افكارك ثق تماماً سنقوم بتحويلها لحلول عملية تخدم مشروعك للمضي قدما لتحقيق النجاح .
 </span>
